--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,84 @@ body {
     height: 720px;
 }
 
+.familyShowWrapper {
+    width: 200px;
+    height: 200px;
+    margin: 15% 0% 0% 20%;
+    perspective: 1000px;
+}
+
+.familyShow {
+    animation: cube 10s ease-in-out infinite;
+    transform-style: preserve-3d;
+    transform-origin: 100px 100px 0;
+}
+
+.familyShow div {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    line-height: 200px;
+}
+
+.familySlide1 {
+    background-image: url(../images/all1.jpg);
+    background-size: cover;
+    background-position: center center;
+    transform: translateZ(100px);
+}
+
+.familySlide2 {
+    background-image: url(../images/amberem1.jpg);
+    background-size: cover;
+    background-position: center center;
+    transform: rotateY(90deg) translateZ(100px);
+}
+
+.familySlide3 {
+    background-image: url(../images/meamber.jpg);
+    background-size: cover;
+    background-position: center center;
+    transform: rotateY(90deg) rotateX(90deg) translateZ(100px);
+}
+
+.familySlide4 {
+    background-image: url(../images/meem.jpg);
+    background-size: cover;
+    background-position: center center;
+    transform: rotateY(180deg) rotateZ(90deg) translateZ(100px);
+}
+
+.familySlide5 {
+    background-image: url(../images/em2.jpg);
+    background-size: cover;
+    background-position: center center;
+    transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
+}
+
+.familySlide6 {
+    background-image: url(../images/all2.jpg);
+    background-size: cover;
+    background-position: center center;
+    transform: rotateX(-90deg) translateZ(100px);
+}
+
+@keyframes cube {
+    from,to {
+        transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    } 16% {
+        transform: rotateY(-90deg);
+    } 33% {
+        transform: rotateY(-90deg) rotateZ(90deg);
+    } 50% {
+        transform: rotateY(-180deg) rotateZ(90deg);
+    } 66% {
+        transform: rotateY(-270deg) rotateZ(90deg);
+    } 90% {
+        transform: rotateX(90deg) rotateZ(-90deg);
+    }
+}
+
 /* Contact Area */
 /* ========================= */
 
