--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
 /* ========================= */
 
 #logoArea {
-    background-color: tomato;
+    background-color: coral;
     background-size: cover;
     background-repeat: no-repeat;
     height: 660px;
@@ -44,37 +44,163 @@ body {
 /* ========================= */
 
 #portfolioArea {
-    background-color: white;
-    border: 60px solid black;
-    height: 700px;
+    background-color: black;
+    height: 701px;
+    position: relative;
+}
+
+.portfolioShowWrapper {
+    position: absolute;
+    top: 30%;
+    left: 20%;
+    width: 320px;
+    perspective: 1000px;
+    transform: scale(0.8);
 }
 
 .portfolioShow {
+    position: absolute;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    display: block;
-    margin-left: 8%;
-    margin-top: 3.3%;
+    transform-style: preserve-3d;
+    transform: rotateY(-360deg) translateZ(-300px);
+    animation: carousel 18s steps(10000, end) infinite;
+}
+
+.portfolioShow:hover {
+    animation-play-state: paused;
+}
+
+@keyframes carousel {
+    from {
+        transform: rotateY(360deg) rotateZ(20deg);
+    } to {
+        transform: rotateY(0deg) rotateZ(20deg);
+    }
 }
 
 .portfolioSlide {
-    width: 100%;
-    height: 85%;
-    overflow: hidden;
-    display: block;
-    background-size: cover;
-    background-position: center;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 300px;
+    height: 200px;
 }
 
-.portfolioSlide p {
-    font-size: 50px;
+.psychic {
+    background-image: url(../images/psychic.jpg);
+    background-size: cover;
+    border: 5px solid whitesmoke;
+    transform: rotateY(0deg) translateZ(300px);
+}
+
+.cave {
+    background-image: url(../images/cave.jpg);
+    background-size: cover;
+    border: 5px solid whitesmoke;
+    transform: rotateY(60deg) translateZ(300px);
+}
+
+.node {
+    background-image: url(../images/node.jpg);
+    background-size: cover;
+    border: 5px solid whitesmoke;
+    transform: rotateY(120deg) translateZ(300px);
+}
+
+.meme {
+    background-image: url(../images/meme.jpg);
+    background-size: cover;
+    border: 5px solid whitesmoke;
+    transform: rotateY(180deg) translateZ(300px);
+}
+
+.train {
+    background-image: url(../images/train.jpg);
+    background-size: cover;
+    border: 5px solid whitesmoke;
+    transform: rotateY(240deg) translateZ(300px);
+}
+
+.money {
+    background-image: url(../images/money.jpg);
+    background-size: cover;
+    background-position: center center;
+    border: 5px solid whitesmoke;
+    transform: rotateY(300deg) translateZ(300px);
+}
+
+.portfolioSlide a {
+    color: white;
+}
+
+.portfolioSlide a:hover {
+    color: black;
+}
+
+.gitBtn {
+    background-color: black;
+    background-size: cover;
+    border-radius: 50%;
     position: absolute;
-    bottom: 15%;
-    font-family: 'Charm';
-    right: 5%;
-    width: fit-content;
-    color: whitesmoke;
+    left: 5px;
+    bottom: 5px;
+}
+
+.gitBtn:hover {
+    background-color: springgreen;
+    animation: rotate 3s linear infinite;
+}
+
+.infoBtn {
+    background-color: black;
+    background-size: cover;
+    border-radius: 50%;
+    position: absolute;
+    right: 41%;
+    bottom: 5px;
+}
+
+.infoBtn:hover {
+    background-color: gold;
+    animation: rotate 3s linear infinite;
+}
+
+.webBtn {
+    background-color: black;
+    background-size: cover;
+    border-radius: 50%;
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+}
+
+.webBtn:hover {
+    background-color: dodgerblue;
+    animation: rotate 3s linear infinite;
+}
+
+@keyframes rotate {
+    100% {transform: rotateZ(360deg);}
+}
+
+.infoArea {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+}
+
+.projectTitle {
+    margin-top: -40%;
+}
+
+.projectTech {
+    margin-top: 30%
 }
 
 /* Skills Area */
@@ -98,81 +224,86 @@ body {
 }
 
 .familyShowWrapper {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     margin: 15% 0% 0% 20%;
     perspective: 1000px;
 }
 
 .familyShow {
-    animation: cube 10s ease-in-out infinite;
+    animation: cube 25s ease-in-out infinite;
     transform-style: preserve-3d;
-    transform-origin: 100px 100px 0;
+    transform-origin: 150px 150px 0;
+}
+
+.familyShow:hover {
+    animation-play-state: paused;
 }
 
 .familyShow div {
     position: absolute;
-    width: 200px;
-    height: 200px;
-    line-height: 200px;
+    width: 300px;
+    height: 300px;
+    line-height: 300px;
+    border-radius: 50%;
 }
 
 .familySlide1 {
     background-image: url(../images/all1.jpg);
     background-size: cover;
     background-position: center center;
-    transform: translateZ(100px);
+    transform: translateZ(200px);
 }
 
 .familySlide2 {
     background-image: url(../images/amberem1.jpg);
     background-size: cover;
     background-position: center center;
-    transform: rotateY(90deg) translateZ(100px);
+    transform: rotateY(90deg) translateZ(200px);
 }
 
 .familySlide3 {
     background-image: url(../images/meamber.jpg);
     background-size: cover;
     background-position: center center;
-    transform: rotateY(90deg) rotateX(90deg) translateZ(100px);
+    transform: rotateY(90deg) rotateX(90deg) translateZ(200px);
 }
 
 .familySlide4 {
     background-image: url(../images/meem.jpg);
     background-size: cover;
     background-position: center center;
-    transform: rotateY(180deg) rotateZ(90deg) translateZ(100px);
+    transform: rotateY(180deg) rotateZ(90deg) translateZ(200px);
 }
 
 .familySlide5 {
     background-image: url(../images/em2.jpg);
     background-size: cover;
     background-position: center center;
-    transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
+    transform: rotateY(-90deg) rotateZ(90deg) translateZ(200px);
 }
 
 .familySlide6 {
     background-image: url(../images/all2.jpg);
     background-size: cover;
     background-position: center center;
-    transform: rotateX(-90deg) translateZ(100px);
+    transform: rotateX(-90deg) translateZ(200px);
 }
 
 @keyframes cube {
     from,to {
         transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
-    } 16% {
+    } 15% {
         transform: rotateY(-90deg);
-    } 33% {
+    } 30% {
         transform: rotateY(-90deg) rotateZ(90deg);
-    } 50% {
+    } 45% {
         transform: rotateY(-180deg) rotateZ(90deg);
-    } 66% {
+    } 60% {
         transform: rotateY(-270deg) rotateZ(90deg);
-    } 90% {
+    } 75% {
         transform: rotateX(90deg) rotateZ(-90deg);
-    }
+    } 
 }
 
 /* Contact Area */
