Temp. Nav Added for Quality of Life

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,39 +5,78 @@ html {
     width: 100%;
     height: 100%;
     padding: 0;
-    margin: 0px;
+    margin: 0;
 }
 
 body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     padding: 0;
-    margin: 0px;
+    margin: 0;
 
     background-color: whitesmoke;
 }
 
-.myBreak {
-    height: 200px;
-    background-color: yellow;
+.container-fluid {
+    height: 100vh;
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    scroll-padding-top: 10vh;
 }
 
 /* Header */
 /* ========================= */
 
 #header {
-    height: 60px;
-    background-color: green;
+    height: 11vh;
+    background-color: black;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    font-family: 'Charm';
+}
+
+#navUl {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+}
+
+#navUl li {
+    margin-right: 3%;
+    margin-top: 2%;
+    transition: 0.5s;
+}
+
+#navUl li a {
+    position: relative;
+    text-decoration: none;
+    color: whitesmoke;
+    transition: 0.7s;
+}
+
+#navUl:hover li {
+    transform: scale(1.2);
+    opacity: 0.6;
+    filter: blur(2px);
+}
+
+#navUl li:hover {
+    transform: scale(1.4);
+    opacity: 1;
+    filter: blur(0);
 }
 
 /* Logo Area */
 /* ========================= */
 
 #logoArea {
-    background-color: coral;
+    background-color: black;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 660px;
+    scroll-snap-align: start;
+    height: 90vh;
 }
 
 /* Portfolio Area */
@@ -45,8 +84,9 @@ body {
 
 #portfolioArea {
     background-color: black;
-    height: 701px;
     position: relative;
+    scroll-snap-align: start;
+    height: 90vh;
 }
 
 .portfolioShowWrapper {
@@ -55,7 +95,7 @@ body {
     left: 20%;
     width: 320px;
     perspective: 1000px;
-    transform: scale(0.8);
+    transform: scale(0.6);
 }
 
 .portfolioShow {
@@ -210,7 +250,8 @@ body {
     background-image: url(../images/tesla.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 720px;
+    scroll-snap-align: start;
+    height: 90vh;
 }
 
 /* Bio Area */
@@ -220,7 +261,8 @@ body {
     background-image: url(../images/flag.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 720px;
+    scroll-snap-align: start;
+    height: 90vh;
 }
 
 .familyShowWrapper {
@@ -234,10 +276,6 @@ body {
     animation: cube 25s ease-in-out infinite;
     transform-style: preserve-3d;
     transform-origin: 150px 150px 0;
-}
-
-.familyShow:hover {
-    animation-play-state: paused;
 }
 
 .familyShow div {
@@ -313,5 +351,6 @@ body {
     background-image: url(../images/beach.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 720px;
+    scroll-snap-align: start;
+    height: 90vh;
 }
